gave the dl element a margin to align correctly inside content

--- a/app/assets/stylesheets/products/_show.sass
+++ b/app/assets/stylesheets/products/_show.sass
@@ -4,6 +4,9 @@
   .row
     margin-top: 10px
 
+    dl
+      margin-left: 40px
+
   .shadow
     margin: 0 auto 10px
 
